test/sema/struct_in_condition.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
struct S {
}
struct S2 {
}

fn main() -> void {
    let x = S{};

    // CHECK: [[# @LINE + 1 ]]:9: error: unexpected type in condition 'S{}'
    if (x) {
    }

    // CHECK: [[# @LINE + 1 ]]:12: error: unexpected type in condition 'S{}'
    while (x) {
    }
}